Update to dice roll features

--- a/dicee.html
+++ b/dicee.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <footer>Dice Roll Game</footer>
+    <footer>Refresh the page to roll dice</footer>
     <script src="index.js"></script>
   </body>
 </html>
